# notepy-online

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  migrate_notes.py  pyproject.toml
docs/: README.md  api-reference.md  cli-reference.md  configuration.md  developer-guide.md  installation.md  user-guide.md
src/notepy_online/: __init__.py  cli.py  core.py  html.py  main.py  resource.py  server.py  static_utils.py
src/notepy_online/static/: __init__.py
src/notepy_online/static/css/: editor.css  main.css
src/notepy_online/static/js/: editor.js  status.js
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_core.py  test_server.py
