[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notepy-online"
version = "0.1.0"
description = "A professional online note-taking and management platform with web interface and CLI for creating, organizing, and sharing notes"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["notes", "web", "cli", "management", "organization", "sharing"]
authors = [
    {name = "Notepy Online Team", email = "team@notepy-online.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "aiohttp>=3.9.0",
    "toml>=0.10.0",
    "cryptography>=41.0.0"
]

[project.scripts]
notepy-online = "notepy_online.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/notepy_online"]
