[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notepy-online"
version = "0.1.0"
description = "A professional online note-taking and management platform with web interface and CLI for creating, organizing, and sharing notes"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["notes", "web", "cli", "management", "organization", "sharing"]
authors = [{ name = "Notepy Online Team", email = "team@notepy-online.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "aiohttp>=3.9.0",
    "toml>=0.10.0",
    "cryptography>=41.0.0",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "aioresponses>=0.7.0",
    "httpx>=0.25.0",
]

[project.scripts]
notepy-online = "notepy_online.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/notepy_online"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/notepy_online",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/notepy_online"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
